--- a/scss/pages/_actividades.scss
+++ b/scss/pages/_actividades.scss
@@ -1,1 +1,24 @@
+body{
+    main{
+        h4{
+            color:blue;
+            font-size: 2rem;
+        }
+
+        h2{
+            color:#9510e8;
+        }
+
+        .card{
+            h3{
+                color:#000000;
+            }
+        }
+
+    }
+
+
+
+
+}
 
