--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -113,7 +113,7 @@ body{
     
     text-align: center;
         .disfruta {
-           
+           margin-top:5rem;
             text-align: center;
             font-size: 2rem;
             color: #ffffff;
@@ -136,7 +136,7 @@ body{
 
                 .text-white{
                     color: #ffffff;
-                    background-color: #2526262c;
+                 background-color: #2526262c;
                     display: inline-block;
                 }
               
